<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.aiub.farhanarrafi.emergencyinformation.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/textview_load_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/textview_load_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/button_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_hospital" />

    <Button
        android:id="@+id/button_blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_blood" />

    <Button
        android:id="@+id/button_dental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dental" />

    <Button
        android:id="@+id/button_newspaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_newspaper" />

    <Button
        android:id="@+id/button_pharmacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pharmacy" />
    
    <Button
        android:id="@+id/button_ngo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ngo" />
    
    <Button
        android:id="@+id/button_rab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_rab" />

    <TextView
        android:id="@+id/textViewLoadData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>
